end butto for chat
